[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/alagard_by_pix3m-d6awiwp.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/checked.png" type="Texture" id=2]
[ext_resource path="res://Src/SoundControls.gd" type="Script" id=3]
[ext_resource path="res://Assets/unchecked.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="SoundControls" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="MusicCheckbox" type="CheckBox" parent="."]
margin_right = 71.0
margin_bottom = 24.0
rect_clip_content = true
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 1 )
custom_icons/checked = ExtResource( 2 )
custom_icons/unchecked = ExtResource( 4 )
text = "Music"
flat = true

[node name="SoundCheckbox" type="CheckBox" parent="."]
margin_left = 89.0
margin_right = 176.0
margin_bottom = 40.0
rect_clip_content = true
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 1 )
custom_icons/checked = ExtResource( 2 )
custom_icons/unchecked = ExtResource( 4 )
text = "Sound"
flat = true

[connection signal="pressed" from="MusicCheckbox" to="." method="_on_MusicCheckbox_pressed"]
[connection signal="pressed" from="SoundCheckbox" to="." method="_on_SoundCheckbox_pressed"]
